--- a/lib/dune
+++ b/lib/dune
@@ -1,5 +1,5 @@
 (library
- (name fungo)
+ (name fungo_lib)
  (libraries core utop eio)
  (preprocess (pps ppx_deriving.show ppx_deriving.eq))
  (flags (:standard -warn-error -a -bin-annot)))
